<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="#4bf9f9f9"
    android:padding="10dp">


    <TextView
        android:id="@+id/rowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:shadowColor="#FF0000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/title"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/rowDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/date_and_time"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/rowMassage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/massage"
        android:textSize="15sp"
        android:layout_alignLeft="@+id/rowTitle"
        android:layout_alignStart="@+id/rowTitle"
        android:layout_below="@+id/rowTitle"

        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"/>

</RelativeLayout>