<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:gravity="fill_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/add_ll"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.arnab.remindme.AddReminderActivity"
    tools:showIn="@layout/activity_add_reminder">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/date_and_time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="setDateTimeAgain"
        android:textColor="#000000" />

    <AutoCompleteTextView
        android:id="@+id/actv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/colorHintEditText"
        android:hint="@string/reminder_title_mandatory"
        android:inputType="textCapSentences"
        android:textColor="@color/colorEditText"
        android:maxLength="21" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/details_optional"
            android:imeOptions="actionSend"
            android:textColorHint="@color/colorHintEditText"
            android:textColor="@color/colorEditText"
            android:inputType="textCapSentences|textMultiLine" />
    </ScrollView>

</LinearLayout>
